syntax = "proto2";

package com.allinabc.ods.klarf.buf;

message WaferDetail {

  // wafer id
  required string ref_wafer_id = 1;

  required string lot_id = 2;
  required string wafer_no = 3;
  required string product_id = 4;
  required string step_id = 5;
  required string scan_tm = 6;

  required int32 defect_count = 7;

  repeated Defect defects = 8;
  repeated Die dies = 9;

  // defect id及坐标
  message Defect {
    required int32 defect_id = 1;
    required Coord coord = 2;
    required Coord die_index = 3;
    required int32 man_bin = 4;
    required int32 rough_bin = 5;
    required int32 adc_bin = 6;
    required int32 cluster_id = 7;
  }

  message Die {
    required Coord die_index = 1;
    required Coord die_coord = 2;
  }

  message Coord {
    required int32 x = 1;
    required int32 y = 2;
  }

}